# HelloVTK

./: CMakeLists.txt  HelloVTK.code-workspace  hellovtk.cpp  run.sh  vtk.cmake
Examples/: InterpolateMeshOnGrid.tar  Read_vtkArray_TupleComponents.cxx
VtkReader/: CMakeLists.txt  CMakeLists_01.txt  CreateVtkLookupTable.cpp  Gemini_VtkPolyMeshViewer.cpp  MyReadPolyData.cpp  MyReadPolyData_Color_by_Mapper_And_Lut.cpp  MyReadPolyData_Color_by_PointCell_Scalars.cpp  ReadAllPolyDataTypes.cxx
VtkToUnreal/: Gemini_Configuring_VTK_with_MPI_and_Path_20250722T234731.html  Gemini_VTK_Integration_Issues_in_Unreal_2025.7.22T234406.html  create_vtk_cells_to_file.cpp  create_vtkcells.cpp  gem_VtkPolyDataVisualizer_FaceColoring.cpp  gem_VtkPolyDataVisualizer_TesselFilterLook.cpp  gem_VtkPolyDataVisualizer_TesselFilterLook1.cpp  gem_vtk_custom_memory_allocatorfree_new.cpp  gem_vtk_custom_memory_allocatorfree_old.cpp  gemini_cmake_for_vtk.cmake  gemini_manually_vtk_compile_link_bash.sh  gemini_vtk_a_lot_ldiffernt_looks_in_unreal_why.gemini  gemini_vtk_calculate_normals_with_vtkPolyDataNormals.cpp  gemini_vtk_cellarray_traverse_cell.cpp  gemini_vtk_error_handle_in_unreal.cpp  gemini_vtk_immediate_validation_vtkpolydata.cpp  gemini_vtk_interactive_polydata_viewer_face_attributes_custom_lookup.cpp  gemini_vtk_tangent_in_unreal_side.cpp  gemini_vtk_tangent_in_vtk_side.cpp  gemini_vtk_unreal_extracting_and_using_Normals.cpp  generate_mesh_from_structured_no_pointsdata.cpp  poly_data_to_unrea_mapper_manually_lookuptable_ver1.cpp  poly_data_to_unrea_mapper_manually_lookuptable_ver2.cpp  poly_data_to_unrea_mapper_manually_lookuptable_ver2_integration_unreal.cpp  (+14 more)
(+12 files in other folders)
